# csapex_core_plugins

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  plugins.xml
csapex_arff/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_arff/cmake/: csapex_arff-config.cmake
csapex_arff/snippets/: classifier_test.apexs
csapex_arff/src/: ada_boost.cpp  ada_boost.h  ada_boost_trainer.cpp  arff_feature_message_provider.cpp  arff_feature_message_provider.h  arff_file_exporter.cpp  arff_file_exporter.h  decision_tree.cpp  decision_tree.h  decision_tree_trainer.cpp  decision_tree_trainer.h  extended_svm.hpp  gradient_boosted_trees_trainer.cpp  jannlab_mlp.h  mlp_cv_trainer.cpp  random_trees.h  random_trees_trainer.h  svm.cpp  svm.h  svm_ensemble.h  svm_ensemble_trainer.cpp  svm_ensemble_trainer.h  svm_trainer.h  waldboost.h
csapex_bar_code/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_bar_code/cmake/: FindZBar.cmake
csapex_bar_code/src/: bar_code_reader.cpp  bar_code_reader.h
csapex_boolean/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_boolean/src/: and.cpp  and.h  binary_boolean.cpp  boolean_trigger.cpp  compare_integer.cpp  indicator.cpp  indicator.h  nand.cpp  nand.h  register_plugin.cpp  register_plugin.h  threshold.cpp  toggle.cpp  toggle.h
csapex_core_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_core_plugins/cmake/: csapex_core_plugins-config.cmake
csapex_core_plugins/snippets/: parallel_slot_tester.apex
csapex_core_plugins/src/: calculate_duration.cpp  collection_node.cpp  composer.cpp  composite_message.cpp  decomposer.cpp  delay.cpp  delay.h  demultiplexer.cpp  double_buffer.cpp  double_buffer.h  double_input.cpp  double_input.h  duration_message.cpp  export_cout.cpp  export_cout.h  export_file.cpp  export_file.h  export_ros.cpp  file_drag_io.cpp  file_importer.cpp  file_importer.h  foreach.cpp  foreach.h  foreach_adapter.cpp  foreach_adapter.h  holdable_buffer.cpp  holdable_buffer.h  import_cin.cpp  import_cin.h  import_file.cpp  import_file.h  import_ros.cpp  import_ros.h  interactive_node.cpp  multiplexer.cpp  output_display.cpp  output_display.h  output_display_adapter.cpp  output_display_adapter.h  point_message.cpp  (+19 more)
csapex_core_plugins/tests/: CMakeLists.txt
csapex_evaluation/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_evaluation/src/: confidence_class_toggle.cpp  confidence_class_toggle.h  confidence_evaluator.cpp  confidence_evaluator.h  confidence_matrix.cpp  confidence_matrix_display.cpp  confidence_matrix_display.h  confidence_matrix_display_adapter.cpp  confidence_matrix_display_adapter.h  confidence_matrix_message.cpp  confusion_matrix.cpp  confusion_matrix_display.cpp  confusion_matrix_display.h  confusion_matrix_display_adapter.cpp  confusion_matrix_display_adapter.h  confusion_matrix_message.cpp  empty_labeled_feature_message.cpp  empty_labeled_feature_message.h  evaluate_binary_classifier.cpp  evaluate_binary_classifier.h  evaluate_binary_classifier_adapter.cpp  evaluate_binary_classifier_adapter.h  evaluate_feature_classification.cpp  evaluate_feature_classification.h  ml_evaluator.cpp  ml_evaluator.h
csapex_math/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_math/res/: csapex_math_resources.qrc
csapex_math/src/: generic_vector_message_get_extremum.cpp  negate_number.cpp  norm_of_generic_vector_message.cpp  register_math.cpp  scale_generic_vector_message.cpp  sum.cpp
csapex_math/tests/: CMakeLists.txt
csapex_ml/: CMakeLists.txt  package.xml  plugins.xml
csapex_ml/cmake/: csapex_ml-config.cmake
csapex_ml/snippets/: classifier_test.apexs
csapex_ml/src/: ada_boost.cpp  ada_boost.h  ada_boost_trainer.cpp  ada_boost_trainer.h  arff_feature_message_provider.cpp  arff_feature_message_provider.h  arff_file_exporter.h  arff_file_importer.cpp  arff_file_importer.h  arff_format_export.cpp  arff_format_export.h  assign_class.cpp  assign_class.h  assign_feature_classifications.cpp  assign_feature_labels.cpp  assign_feature_labels.h  decision_tree.cpp  decision_tree.h  decision_tree_forest.cpp  decision_tree_forest.h  decision_tree_forest_trainer.cpp  decision_tree_forest_trainer.h  decision_tree_trainer.cpp  decision_tree_trainer.h  export_jann_format.cpp  export_jann_format.h  extended_svm.hpp  features_message.cpp  gradient_boosted_trees.cpp  gradient_boosted_trees.h  gradient_boosted_trees_trainer.cpp  gradient_boosted_trees_trainer.h  jannlab_mlp.cpp  jannlab_mlp.h  machine_learning_node.cpp  machine_learning_node.h  mlp.cpp  mlp.h  mlp_cv.cpp  mlp_cv.hpp  (+28 more)
csapex_opencv/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_opencv/cmake/: csapex_opencv-config.cmake
csapex_opencv/res/: csapex_vision_resources.qrc  hog_svm_daimler.yml
csapex_opencv/src/: binary_io.cpp  blob_detector.cpp  blob_detector.h  circle.cpp  circle_message.cpp  cv_mat_message.cpp  cv_pyramid_message.cpp  encoding.cpp  example_image_generator.cpp  filter.cpp  image_information.cpp  image_provider.cpp  image_provider_dir.cpp  image_provider_dir.h  image_provider_img.cpp  image_provider_img.h  image_provider_mov.cpp  image_provider_mov.h  image_provider_set.cpp  image_provider_set.h  image_renderer.cpp  roi.cpp  roi_message.cpp  yaml_io.cpp
csapex_optimization/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_optimization/src/: bf_optimizer.cpp  bf_optimizer.h  bf_optimizer_adapter.cpp  bf_optimizer_adapter.h  get_best_optimization_result.cpp  optimization_dummy.cpp  optimization_dummy.h  optimizer.cpp  (+6 more)
csapex_plot/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.qwt  package.xml  plugins.xml
csapex_point_cloud/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_rqt/: CMakeLists.txt
csapex_sample_consensus/: CMakeLists.txt  package.xml  plugins.xml
csapex_scan_2d/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
csapex_state/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
(+1684 files in other folders)
