<?xml version="1.0"?>
<package>
  <name>csapex_tutorial</name>
  <version>0.0.0</version>
  <description>The csapex_tutorial package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex</build_depend>
  <build_depend>csapex_opencv</build_depend>
  <build_depend>csapex_ros</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>csapex</run_depend>
  <run_depend>csapex_opencv</run_depend>
  <run_depend>csapex_ros</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
    <csapex plugin="${prefix}/plugins.xml"
            tutorials="${prefix}/tutorials" />
  </export>
</package>
