<?xml version="1.0"?>
<package>
  <name>csapex_core_plugins</name>
  <version>0.0.0</version>
  <description>Core plugins for the vision evaluator.</description>
  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex</build_depend>
  <build_depend>csapex_testing</build_depend>

  <run_depend>csapex</run_depend>
  <run_depend>csapex_testing</run_depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" snippets="${prefix}/snippets" />
  </export>
</package>
